--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
   font-family: 'Montserrat', sans-serif;
   text-align: center;
-  background-color: #441953;
+  background-color: #b653da;
   color: rgba(247, 221, 255, 0.82);
   overflow-x: hidden;
 }
