--- a/src/scrollbar.css
+++ b/src/scrollbar.css
@@ -1,36 +1,50 @@
 /* Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: #621C73 #441953;
+  scrollbar-color: #b653da #b653da;
 }
 
 /* Chrome, Edge and Safari */
 *::-webkit-scrollbar {
   width: 15px;
+  opacity: 0;
+
 }
 
 *::-webkit-scrollbar-track {
   border-radius: 0px;
-  background-color: #441953;
+  background-color: #b653da;
+  opacity: 0;
+
 }
 
 *::-webkit-scrollbar-track:hover {
-  background-color: #320B40;
+  background-color: #b653da;
+  opacity: 0;
+
 }
 
+
 *::-webkit-scrollbar-track:active {
-  background-color: #320B40;
+  background-color: #b653da;
+  opacity: 0;
+
 }
 
 *::-webkit-scrollbar-thumb {
   border-radius: 0px;
-  background-color: #621C73;
+  background-color: #b653da;
+  opacity: 0;
+
 }
 
 *::-webkit-scrollbar-thumb:hover {
   background-color: #AD33CC;
+  opacity: 0;
+
 }
 
 *::-webkit-scrollbar-thumb:active {
   background-color: #AD33CC;
+  opacity: 0;
 }
