--- a/src/App.css
+++ b/src/App.css
@@ -62,10 +62,42 @@
   align-items: end;
 }
 
+.text-left {
+  text-align: left;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.emoji {
+  font-size: 34px;
+  font-weight: 200;
+  color: rgb(131, 0, 138);
+  /* Adjust the size as needed */
+  /* Add some spacing between the emoji and text */
+}
+
+.font-purple {
+  color: rgb(131, 0, 138);
+  font-weight: 500;
+}
+
 .content-center {
   display: flex;
   justify-content: center;
   align-items: center;
+  vertical-align: middle;
 }
 
 .no-deco {
@@ -92,7 +124,8 @@
   position: fixed;
   top: 0;
   z-index: 10000;
-  background-color: #ae4dd1;
+  /* background-color: #ae4dd1; */
+  background-color: #ad33cc;
 }
 
 .header-spacer {
@@ -154,8 +187,21 @@
   color: #9849b4;
 }
 
+.font-mono {
+  font-family: 'Roboto Mono', monospace;
+}
+
+.light-bg-2 {
+  background-color: rgba(255, 255, 255, 0.2);
+  border: 2px solid rgb(131, 0, 138);
+  border-radius: 10px;
+  color: white;
+  border-radius: 3px;
+}
+
 .small-box {
-  width: 400px;
+  width: 450px;
+  max-width: 80vw;
 }
 
 .button-k {
